buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        maven { url = 'https://maven.parchmentmc.org' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
        classpath 'org.parchmentmc:librarian:1.+'
    }
}
apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.parchmentmc.librarian.forgegradle'
apply plugin: 'org.spongepowered.mixin'
apply plugin: 'maven-publish'
apply plugin: 'eclipse'

mixin {
    config "pmmo.mixins.json"
    add sourceSets.main, "pmmo.refmap.json"
    disableEclipseAddon = true

    debug.export = true
}

repositories {
    maven { url "https://maven.theillusivec4.top/" }
    maven {
        name = "Progwml6 maven"
        url = "https://dvs1.progwml6.com/files/maven/"
    }
    maven {
    	url 'https://cursemaven.com'
    	content { includeGroup 'curse.maven' }
	}
    maven {
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
    maven {
        url "https://maven.blamejared.com"
    }
    flatDir { dirs 'libs' }
}

version = '1.19.4-0.0.3'
group = 'harmonised.pmmo'
archivesBaseName = 'pmmo'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
minecraft {
    mappings channel: 'parchment', version: '1.19.3-2023.03.12-1.19.4'
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run/client')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                pmmo {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run/server')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                pmmo {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run/client')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            args '--mod', 'pmmo', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
            mods {
                pmmo {
                    source sourceSets.main
                    forceExit = false
                }
            }
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

dependencies {
    minecraft 'net.minecraftforge:forge:1.19.4-45.0.43'
    annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
    //CT Processors
    //annotationProcessor 'com.blamejared.crafttweaker:Crafttweaker_Annotation_Processors:3.0.0.10'
    //annotationProcessor 'net.minecraftforge:forge:1.19.3-43.2.3'
    //annotationProcessor 'com.blamejared.crafttweaker:CraftTweaker-forge-1.19.3:10.0.25'

    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.19.3-5.1.4.0:api")
    //compileOnly fg.deobf("mezz.jei:jei-1.18.2:9.7.0.195:api")  	
  	//compileOnly fg.deobf("curse.maven:ftbq-${projectid_ftbq}:${version_ftbq}")
  	//compileOnly fg.deobf("curse.maven:ftbt-${projectid_ftbt}:${version_ftbt}")
  	//compileOnly fg.deobf("curse.maven:ftbl-${projectid_ftbl}:${version_ftbl}")
  	//compileOnly fg.deobf("curse.maven:ftbf-${projectid_ftbf}:${version_ftbf}")
  	//compileOnly fg.deobf("curse.maven:arch-${projectid_arch}:${version_arch}")
  	//compileOnly('com.blamejared.crafttweaker:CraftTweaker-forge-1.19.3:10.0.25')
  	
  	//runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.19.2-5.1.1.0")
  	//runtimeOnly fg.deobf("mezz.jei:jei-1.18.2:9.7.0.195")
  	//runtimeOnly fg.deobf("curse.maven:ftbq-${projectid_ftbq}:${version_ftbq}")
  	//runtimeOnly fg.deobf("curse.maven:ftbt-${projectid_ftbt}:${version_ftbt}")
  	//runtimeOnly fg.deobf("curse.maven:ftbl-${projectid_ftbl}:${version_ftbl}")
  	//runtimeOnly fg.deobf("curse.maven:ftbf-${projectid_ftbf}:${version_ftbf}")
  	//runtimeOnly fg.deobf("curse.maven:arch-${projectid_arch}:${version_arch}")
  	//runtimeOnly fg.deobf('com.blamejared.crafttweaker:CraftTweaker-forge-1.19.2:10.0.25')
  	//runtimeOnly fg.deobf('curse.maven:aquaculture-60028:4074684')
  	//runtimeOnly fg.deobf('curse.maven:twilight-227639:4337394')
}

jar {
    manifest {
        attributes([
                "Specification-Title"     : "Project MMO 2.0",
                "Specification-Vendor"    : "Project PMMO",
                "Specification-Version"   : "1", // We are version 1 of ourselves
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : "Project PMMO",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

def reobfFile = file("$buildDir/reobfJar/output.jar")
def reobfArtifact = artifacts.add('default', reobfFile) {
    type 'jar'
    builtBy 'reobfJar'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact reobfArtifact
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(Copy).all {
    duplicatesStrategy 'exclude'
}

tasks.withType(JavaCompile).configureEach {
    compileJava.options.encoding = 'UTF-8' 
}

compileJava {
    options.compilerArgs << "-Acrafttweaker.processor.document.output_directory=${file('docsOut')}"
}